...
import cz.mendelu.bookwatchman.R
import cz.mendelu.bookwatchman.navigation.INavigationRouter
import cz.mendelu.bookwatchman.ui.elements.BaseScreen
import cz.mendelu.bookwatchman.ui.elements.ThemedButton
import cz.mendelu.bookwatchman.ui.theme.basicMargin

const val TestTagChooseAddManualButton = "add_manual_button"
const val TestTagChooseSearchOnlineButton = "search_online_button"

@Composable
fun ChooseAddOptionScreen(
    navigation: INavigationRouter
){
...
