...
import cz.mendelu.bookwatchman.ui.theme.basicCornerShape
import cz.mendelu.bookwatchman.ui.theme.basicPadding
import java.io.File

const val TestTagMainMenuScreenLocationButton = "location_button"
const val TestTagMainMenuScreenSettingsButton = "settings_button"
const val TestTagMainMenuScreenAddButton = "add_button"
const val TestTagMainMenuBookshelfSearchBar = "search_bar"
const val TestTagMainMenuBookshelfListOfBooksLazyList = "list_of_books_lazy_list"
const val TestTagMainMenuBookshelfBookCard = "book_card"
const val TestTagMainMenuBookshelfBookTitle = "book_title"
const val TestTagMainMenuBookshelfBookState = "book_state"

@Composable
fun MainMenuBookshelfScreen(
...
