...
import cz.mendelu.bookwatchman.navigation.INavigationRouter
import cz.mendelu.bookwatchman.ui.elements.BaseScreen
import cz.mendelu.bookwatchman.ui.elements.ThemedButton
import cz.mendelu.bookwatchman.ui.theme.basicContentSpacing
import cz.mendelu.bookwatchman.ui.theme.basicPadding

const val TestTagStatsScreenButton = "to_my_bookshelf_button"

@Composable
fun StatsScreen(
    navigation: INavigationRouter
) {
    val viewModel = hiltViewModel<DashboardViewModel>()
...
